fixed illustration postion on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -150,14 +150,14 @@ body, p {
     z-index: 12; }
   .illustration-one {
     object-fit: cover;
-    left: -20px;
+    left: -67px;
     position: absolute;
     width: 414px;
     z-index: 13; }
   .illustration-two {
     margin-top: -200px;
     object-fit: cover;
-    left: -6px;
+    left: -56px;
     position: absolute;
     transform: rotate(-90deg);
     z-index: 13; } }
