--- a/src/scss/components/_illustration.scss
+++ b/src/scss/components/_illustration.scss
@@ -31,7 +31,7 @@
 
   .illustration-one {
     object-fit: cover;
-    left: -20px;
+    left: -67px;
     position: absolute;
     width: 414px;
     z-index: 13;
@@ -39,10 +39,9 @@
   .illustration-two {
     margin-top: -200px;
     object-fit: cover;
-    left: -6px;
+    left: -56px;
     position: absolute;
     transform: rotate(-90deg);
-    // width: 414px;
     z-index: 13;
   }
 }
